--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.4.1'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,6 +20,16 @@ allprojects {
         jcenter()
         
     }
+}
+
+ext {
+    USE_SDK_VERSION = 28
+    targetSdk = 28
+    easy_perm_version = '2.0.0'
+    androidx_appcompat_ver = '1.0.2'
+    androidx_constraintlayout_ver = '1.1.3'
+    android_material_ver = '1.0.0'
+    android_flexbox_ver = '1.0.0'
 }
 
 task clean(type: Delete) {
