--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 18 15:32:49 BDT 2019
-ndk.dir=D\:\\sdk\\ndk-bundle
-sdk.dir=D\:\\sdk
+#Sat Apr 06 08:55:47 EDT 2019
+ndk.dir=C\:\\android\\android-sdk\\ndk-bundle
+sdk.dir=C\:\\android\\android-sdk
