--- a/materialtagview/build.gradle
+++ b/materialtagview/build.gradle
@@ -1,17 +1,15 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 28
-
-
+    compileSdkVersion project.USE_SDK_VERSION
 
     defaultConfig {
-        minSdkVersion 17
-        targetSdkVersion 28
+        minSdkVersion 16
+        targetSdkVersion targetSdk
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
 
@@ -26,13 +24,10 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-
-    implementation "com.android.support:design:28.0.0"
-
-    implementation 'com.google.android:flexbox:1.0.0'
-
+    implementation "androidx.appcompat:appcompat:$androidx_appcompat_ver"
+    implementation "com.google.android.material:material:$android_material_ver"
+    implementation "com.google.android:flexbox:$android_flexbox_ver"
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test:runner:1.2.0-beta01'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
