--- a/materialtagview/build.gradle
+++ b/materialtagview/build.gradle
@@ -28,6 +28,6 @@ dependencies {
     implementation "com.google.android.material:material:$android_material_ver"
     implementation "com.google.android:flexbox:$android_flexbox_ver"
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0-beta01'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
