--- a/materialtagview/build.gradle
+++ b/materialtagview/build.gradle
@@ -1,3 +1,9 @@
+repositories {
+    maven {
+        url "https://dl.bintray.com/google/flexbox-layout/"
+    }
+}
+
 apply plugin: 'com.android.library'
 
 android {
@@ -27,7 +33,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$androidx_appcompat_ver"
     implementation "com.google.android.material:material:$android_material_ver"
     implementation "com.google.android:flexbox:$android_flexbox_ver"
-    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
